@@ -1,3 +1,15 @@
+//   |                                                          |
+// --+----------------------------------------------------------+--
+//   |   Code by : yasserbdj96                                  |
+//   |   Email   : yasser.bdj96@gmail.com                       |
+//   |   Github  : https://github.com/yasserbdj96               |
+//   |   BTC     : bc1q2dks8w8uurca5xmfwv4jwl7upehyjjakr3xga9   |
+// --+----------------------------------------------------------+--  
+//   |        all posts #yasserbdj96 ,all views my own.         |
+// --+----------------------------------------------------------+--
+//   |                                                          |
+
+//START{
 /*s*/
 /*function loadJSON(callback) {   
   var xobj = new XMLHttpRequest();
@@ -38,7 +50,8 @@ if (download_pwa.length > 0){
     // Code to handle install prompt on desktop
     let deferredPrompt;
     const addBtn = document.querySelector('.download_pwa');
-    addBtn.style.display = 'none';
+    //addBtn.style.display = 'none';
+    addBtn.checked=true;
 
   window.addEventListener('beforeinstallprompt',(e)=>{
     // Prevent Chrome 67 and earlier from automatically showing the prompt
@@ -46,11 +59,13 @@ if (download_pwa.length > 0){
     // Stash the event so it can be triggered later.
     deferredPrompt = e;
     // Update UI to notify the user they can add to home screen
-    addBtn.style.display = 'block';
+    //addBtn.style.display = 'block';
+    addBtn.checked=false;
 
     addBtn.addEventListener('click', () => {
       // hide our user interface that shows our A2HS button
-      addBtn.style.display = 'none';
+      //addBtn.style.display = 'none';
+      addBtn.checked=true;
       // Show the prompt
       deferredPrompt.prompt();
       // Wait for the user to respond to the prompt
@@ -66,4 +81,11 @@ if (download_pwa.length > 0){
   });
 }
 
-/*e*/
+/*
+function pwa_uninstall(){
+  alert("hiii");
+  window.addEventListener('beforeinstallprompt', function(e) {
+    localStorage.removeItem('http://127.0.0.1:8080/')
+  })
+}*/
+//}END.
