@@ -36,7 +36,7 @@ input[type=button],.button{
 
 #connected{
     display:none;
-    height: 39px;
+    height: 41px;
 }
 #codeEditor{
   display:none;
