@@ -1,0 +1,4 @@
+python3 -m pip install -r ./requirements.txt
+python3 -m pip install -r ./requirements-pypi.txt
+python3 -m pip install -r ./hiphp-desktop/requirements-dst.txt
+python3 -m pip install -r ./hiphp-tk/requirements-tk.txt
